# zugbook

./: README.md  Zug.ipynb  pyproject.toml
examples/: 2024-04-27-ICE1504-bap-status.json  2024-04-27-ICE1504-status.json  2024-04-27-ICE1504-trip.json
